[package]
name = "diesel_filter"
version = "1.0.0"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["diesel", "pagination", "filter", "json", "rocket"]
description = "Diesel filter is a quick way to add filters and pagination to your diesel models"
homepage = "https://github.com/terry90/diesel_filter"
repository = "https://github.com/terry90/diesel_filter"
readme = "../README.md"

[features]
serialize = ["serde"]
pagination = ["diesel"]
rocket = ["diesel_filter_query/rocket"]
actix = ["diesel_filter_query/actix"]
axum = ["diesel_filter_query/axum"]
utoipa = ["diesel_filter_query/utoipa"]

[dependencies]
diesel_filter_query = { path = "../query", version = ">=1.0.0" }
serde = { version = "1.0", optional = true }
diesel = { version = "2.0.0", optional = true }
