[package]
name = "diesel-filter-query"
version = "2.0.0"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["diesel", "pagination", "filter", "json", "rocket"]
description = "Procedural macros for Diesel filter"
homepage = "https://github.com/terry90/diesel_filter"
repository = "https://github.com/terry90/diesel_filter"
readme = "../README.md"

[features]
rocket = []
actix = []
axum = []
utoipa = []

[dependencies]
syn = "2.0.104"
quote = "1.0.40"
proc-macro2 = "1.0.95"
darling = "0.21.1"

[lib]
proc-macro = true
