[package]
name = "diesel_pagination"
version = "2.0.0"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["diesel", "pagination", "filter", "json", "rocket"]
description = "Diesel filter is a quick way to add filters and pagination to your diesel models"
homepage = "https://github.com/terry90/diesel_filter"
repository = "https://github.com/terry90/diesel_filter"
readme = "../README.md"

[features]
default = []
diesel-async = ["dep:diesel-async"]
serde = ["dep:serde"]
utoipa = ["dep:utoipa"]

[dependencies]
diesel = "2.2.12"
diesel-async = { version = "0.6.1", optional = true }
serde = { version = "1.0", optional = true }
utoipa = { version = "5.4.0", optional = true }
