[package]
name = "diesel_filter_query"
version = "0.1.4"
authors = ["Terry Raimondo <terry.raimondo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["diesel", "pagination", "filter", "json", "rocket"]
description = "Procedural macros for Diesel filter"
homepage = "https://github.com/terry90/diesel_filter"
repository = "https://github.com/terry90/diesel_filter"
readme = "../README.md"

[features]
rocket = []
actix = []
axum = []

[dependencies]
syn = { version = "1.0.74", features = ["parsing"] }
quote = "1.0.9"
proc-macro2 = "1.0.28"

[lib]
proc-macro = true
