[package]
name = "diesel-filter-test-db"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
utoipa = ["dep:utoipa"]

[dependencies]
anyhow = "1.0.98"
diesel = { version = "2", features = ["uuid"] }
diesel-derive-newtype = "2.1.2"
serde = "1.0.219"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
tracing = "0.1.41"
utoipa = { version = "5.4.0", optional = true }
