[package]
name = "diesel-filter-example-async"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
diesel = { version = "2", features = ["uuid"] }
diesel-async = { version = "0.6.1", features = ["postgres"] }
diesel-filter = { path = "../../diesel-filter", features = ["serde", "utoipa"] }
diesel-filter-test-db = { path = "../db", features = ["utoipa"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = "5.4.0"
uuid = { version = "1.17.0", features = ["serde"] }
