[package]
name = "diesel_pagination_example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
diesel = { version = "2", features = ["uuid"] }
diesel-async = { version = "0.6.1", features = ["postgres"] }
diesel-derive-newtype = "2.1.2"
diesel_filter = { path = "../../diesel_filter", features = ["utoipa"] }
diesel_filter_test_db = { path = "../db", features = ["utoipa"] }
diesel_pagination = { path = "../../diesel_pagination", features = [
    "diesel-async",
    "serde",
    "utoipa",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = "5.4.0"
uuid = { version = "1.17.0", features = ["serde"] }
