[package]
edition = "2021"
name = "simple-example"
publish = false
version = "0.1.0"

[dependencies]
diesel = { version = "2", features = ["postgres", "uuid"] }
diesel-derive-newtype = "2.1.0"
diesel_filter = { path = "../../core", features = ["pagination"] }
serde = { version = "1.0", features = ["derive"] }
uuid = "1.2.2"
